simplenode-dev/simplenode-dev-ingress-server-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simplenode
  namespace: simplenode-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`simplenode-dev.rancher.localhost`)
      priority: 10
      services:
        - name: simplenode
          port: 8181
  tls:
    certResolver: default
