simplenode-dev/simplenode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplenode
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: simplenode
  template:
    metadata:
      labels:
        app: simplenode
        app.kubernetes.io/name: simplenodeservice
        app.kubernetes.io/instance: "release"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: "simplenodeproject"
        app.kubernetes.io/managed-by: Keptn
        app.kubernetes.io/version: 1.0.2
      annotations:
        keptn.sh/post-deployment-tasks: notify
    spec:
      containers:
      - name: simplenode
        image: "grabnerandi/simplenodeservice:1.0.2"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 15
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: simplenode
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: simplenode
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplenode
spec:
  rules:
    - host: simplenode-dev.54.244.137.234.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  simplenode
                port:
                  number: 80
